2006-06-05  Tom Tromey  <tromey@redhat.com>

	* testsuite/libjava.loader/TestLeak.java (MyLoader): Now static.
	* testsuite/libjava.jacks/jacks.exp (gcj_jacks_write): Use -w.
	* testsuite/lib/libjava.exp (libjava_arguments): Add -w.
	* testsuite/libjava.compile/G19990210_2.java: Removed.
	* testsuite/libjava.compile/PR208.java: Removed.
	* testsuite/libjava.compile/PR208.xfail: Removed.
	* testsuite/libjava.compile/support/Case.java: Removed.
	* testsuite/libjava.compile/Case.java: Removed.

2006-06-04  Tom Tromey  <tromey@redhat.com>

	* sources.am, Makefile.in: Rebuilt.
	* Makefile.am (gcj_dbtool_LDADD): Add
	gnu-gcj-tools-gcj_dbtool.lo.
	(gcj_dbtool_SOURCES): Updated.
	(EXTRA_libgcj_la_SOURCES): New macro.
	* scripts/makemake.tcl (emit_package_rule): Compile class files
	from the package.
	(gcj_dbtool/Main.java, Class.java, Object.java): Removed
	package_map settings.
	(emit_package_rule): Special case gnu.gcj.tools.gcj_dbtool.

2006-06-04  Tom Tromey  <tromey@redhat.com>

	* java/lang/Class.java (getClassLoaderInternal): Now native.

2006-06-03  Paolo Bonzini  <bonzini@gnu.org>

	* scripts/jar.in: Ensure return with argument has non-empty argument.

2006-06-01  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac (ZIP, UNZIP): New programs.
	(JAR): Fall back to bash script.  Generate it.
	(BASH_JAR): New conditional.
	* Makefile.am (bin_SCRIPTS): New.
	* scripts/jar.in: New file.

2006-06-01  Bryce McKinlay  <mckinlay@redhat.com>

	* gnu/java/lang/MainThread (run): Revert exception chaining change.

2006-05-31  Bryce McKinlay  <mckinlay@redhat.com>

	* prims.cc (_Jv_RunMain): Use JvNewStringUTF for command-line class
	name, not Latin1.
	* gnu/java/lang/MainThread.java (run): Allow file separator char to
	be used in place of '.' as class-name separator. Don't chain
	ClassNotFoundException.

2006-05-31  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* java/lang/VMClassLoader.java (initialize): Set default library
	control to LIB_NEVER.
